fix: background messes up on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -162,9 +162,3 @@ main {
         margin:0;
     }
 }
-
-@media (max-width:375px){
-    .gradient-background {
-        height:auto;
-    }
-}
